add_subdirectory(01-qobject-meta-system-beginner)
set_target_properties(01-qobject-meta-system-beginner PROPERTIES OUTPUT_NAME "01-01-qobject-meta-system")

add_subdirectory(02-signal-slot-beginner)
set_target_properties(02-signal-slot-beginner PROPERTIES OUTPUT_NAME "01-02-signal-slot")

add_subdirectory(03-string-encoding-beginner)
set_target_properties(StringEncodingDemo PROPERTIES OUTPUT_NAME "01-03-string-encoding")

add_subdirectory(04-container-beginner)
set_target_properties(04_container_beginner PROPERTIES OUTPUT_NAME "01-04-container")

add_subdirectory(05-variant-type-beginner)
set_target_properties(05-variant-type-beginner PROPERTIES OUTPUT_NAME "01-05-variant-type")

add_subdirectory(06-memory-management-beginner)
set_target_properties(06-memory-management-beginner PROPERTIES OUTPUT_NAME "01-06-memory-management")

add_subdirectory(07-event-system-beginner)
set_target_properties(event-system-beginner PROPERTIES OUTPUT_NAME "01-07-event-system")

add_subdirectory(08-file-io-beginner)
set_target_properties(08-file-io-beginner PROPERTIES OUTPUT_NAME "01-08-file-io")

add_subdirectory(09-multithreading-beginner)
set_target_properties(multithreading_beginner PROPERTIES OUTPUT_NAME "01-09-multithreading")

add_subdirectory(10-qprocess-beginner)
set_target_properties(10-qprocess-beginner PROPERTIES OUTPUT_NAME "01-10-qprocess")

add_subdirectory(11-timer-beginner)
set_target_properties(11-timer-beginner PROPERTIES OUTPUT_NAME "01-11-timer")

add_subdirectory(12-plugin-beginner)
set_target_properties(12-plugin-beginner PROPERTIES OUTPUT_NAME "01-12-plugin")

add_subdirectory(13-i18n-beginner)
set_target_properties(i18n-example PROPERTIES OUTPUT_NAME "01-13-i18n")

add_subdirectory(14-logging-beginner)
set_target_properties(14-logging-beginner PROPERTIES OUTPUT_NAME "01-14-logging")

add_subdirectory(15-regex-beginner)
set_target_properties(15_regex_beginner PROPERTIES OUTPUT_NAME "01-15-regex")

add_subdirectory(16-json-xml-beginner)
set_target_properties(16_json_xml_beginner PROPERTIES OUTPUT_NAME "01-16-json-xml")
