add_subdirectory(01-qpainter-basic-beginner)
set_target_properties(01-qpainter-basic-beginner PROPERTIES OUTPUT_NAME "02-01-qpainter-basic")

add_subdirectory(02-coordinate-transform-beginner)
set_target_properties(02-coordinate-transform-beginner PROPERTIES OUTPUT_NAME "02-02-coordinate-transform")

add_subdirectory(03-image-pixmap-beginner)
set_target_properties(03-image-pixmap-beginner PROPERTIES OUTPUT_NAME "02-03-image-pixmap")

add_subdirectory(04-font-text-rendering-beginner)
set_target_properties(04-font-text-rendering-beginner PROPERTIES OUTPUT_NAME "02-04-font-text-rendering")

add_subdirectory(05-opengl-widget-beginner)
set_target_properties(05-opengl-widget-beginner PROPERTIES OUTPUT_NAME "02-05-opengl-widget")

add_subdirectory(06-drag-drop-beginner)
set_target_properties(06-drag-drop-beginner PROPERTIES OUTPUT_NAME "02-06-drag-drop")
