add_subdirectory(01-layout-system-beginner)
set_target_properties(01-layout-system-beginner PROPERTIES OUTPUT_NAME "03-01-layout-system")

add_subdirectory(02-event-handling-beginner)
set_target_properties(02-event-handling-beginner PROPERTIES OUTPUT_NAME "03-02-event-handling")

add_subdirectory(03-model-view-beginner)
set_target_properties(03-model-view-beginner PROPERTIES OUTPUT_NAME "03-03-model-view")

add_subdirectory(04-qss-stylesheet-beginner)
set_target_properties(04-qss-stylesheet-beginner PROPERTIES OUTPUT_NAME "03-04-qss-stylesheet")

add_subdirectory(05-custom-widget-paint-beginner)
set_target_properties(05-custom-widget-paint-beginner PROPERTIES OUTPUT_NAME "03-05-custom-widget-paint")

add_subdirectory(06-dialog-system-beginner)
set_target_properties(06-dialog-system-beginner PROPERTIES OUTPUT_NAME "03-06-dialog-system")

add_subdirectory(07-main-window-system-beginner)
set_target_properties(07-main-window-system-beginner PROPERTIES OUTPUT_NAME "03-07-main-window-system")

add_subdirectory(08-graphics-view-beginner)
set_target_properties(08-graphics-view-beginner PROPERTIES OUTPUT_NAME "03-08-graphics-view")

add_subdirectory(09-animation-framework-beginner)
set_target_properties(09-animation-framework-beginner PROPERTIES OUTPUT_NAME "03-09-animation-framework")

add_subdirectory(10-mdi-beginner)
set_target_properties(10-mdi-beginner PROPERTIES OUTPUT_NAME "03-10-mdi")

add_subdirectory(11-qwidget-base-beginner)
set_target_properties(11-qwidget-base-beginner PROPERTIES OUTPUT_NAME "03-11-qwidget-base")

add_subdirectory(12-qabstractbutton-base-beginner)
set_target_properties(12-qabstractbutton-base-beginner PROPERTIES OUTPUT_NAME "03-12-qabstractbutton-base")

add_subdirectory(13-qframe-base-beginner)
set_target_properties(13-qframe-base-beginner PROPERTIES OUTPUT_NAME "03-13-qframe-base")

add_subdirectory(14-qabstractscrollarea-base-beginner)
set_target_properties(14-qabstractscrollarea-base-beginner PROPERTIES OUTPUT_NAME "03-14-qabstractscrollarea-base")

add_subdirectory(15-qabstractitemview-base-beginner)
set_target_properties(15-qabstractitemview-base-beginner PROPERTIES OUTPUT_NAME "03-15-qabstractitemview-base")

add_subdirectory(16-qabstractspinbox-base-beginner)
set_target_properties(16-qabstractspinbox-base-beginner PROPERTIES OUTPUT_NAME "03-16-qabstractspinbox-base")

add_subdirectory(17-qpushbutton-beginner)
set_target_properties(17-qpushbutton-beginner PROPERTIES OUTPUT_NAME "03-17-qpushbutton")

add_subdirectory(18-qtoolbutton-beginner)
set_target_properties(18-qtoolbutton-beginner PROPERTIES OUTPUT_NAME "03-18-qtoolbutton")

add_subdirectory(19-qradiobutton-beginner)
set_target_properties(19-qradiobutton-beginner PROPERTIES OUTPUT_NAME "03-19-qradiobutton")

add_subdirectory(20-qcheckbox-beginner)
set_target_properties(20-qcheckbox-beginner PROPERTIES OUTPUT_NAME "03-20-qcheckbox")

add_subdirectory(21-qcommandlinkbutton-beginner)
set_target_properties(21-qcommandlinkbutton-beginner PROPERTIES OUTPUT_NAME "03-21-qcommandlinkbutton")

add_subdirectory(22-qlineedit-beginner)
set_target_properties(22-qlineedit-beginner PROPERTIES OUTPUT_NAME "03-22-qlineedit")

add_subdirectory(23-qtextedit-beginner)
set_target_properties(23-qtextedit-beginner PROPERTIES OUTPUT_NAME "03-23-qtextedit")

add_subdirectory(24-qplaintextedit-beginner)
set_target_properties(24-qplaintextedit-beginner PROPERTIES OUTPUT_NAME "03-24-qplaintextedit")

add_subdirectory(25-qtextbrowser-beginner)
set_target_properties(25-qtextbrowser-beginner PROPERTIES OUTPUT_NAME "03-25-qtextbrowser")

add_subdirectory(26-qkeysequenceedit-beginner)
set_target_properties(26-qkeysequenceedit-beginner PROPERTIES OUTPUT_NAME "03-26-qkeysequenceedit")

add_subdirectory(27-qcombobox-beginner)
set_target_properties(27-qcombobox-beginner PROPERTIES OUTPUT_NAME "03-27-qcombobox")

add_subdirectory(28-qfontcombobox-beginner)
set_target_properties(28-qfontcombobox-beginner PROPERTIES OUTPUT_NAME "03-28-qfontcombobox")

add_subdirectory(29-qspinbox-doublespinbox-beginner)
set_target_properties(29-qspinbox-doublespinbox-beginner PROPERTIES OUTPUT_NAME "03-29-qspinbox-doublespinbox")

add_subdirectory(30-qdatetimeedit-dateedit-timeedit-beginner)
set_target_properties(30-qdatetimeedit-dateedit-timeedit-beginner PROPERTIES OUTPUT_NAME "03-30-qdatetimeedit-dateedit-timeedit")

add_subdirectory(31-qslider-beginner)
set_target_properties(31-qslider-beginner PROPERTIES OUTPUT_NAME "03-31-qslider")

add_subdirectory(32-qscrollbar-beginner)
set_target_properties(32-qscrollbar-beginner PROPERTIES OUTPUT_NAME "03-32-qscrollbar")

add_subdirectory(33-qdial-beginner)
set_target_properties(33-qdial-beginner PROPERTIES OUTPUT_NAME "03-33-qdial")

add_subdirectory(34-qlabel-beginner)
set_target_properties(34-qlabel-beginner PROPERTIES OUTPUT_NAME "03-34-qlabel")

add_subdirectory(35-qprogressbar-beginner)
set_target_properties(35-qprogressbar-beginner PROPERTIES OUTPUT_NAME "03-35-qprogressbar")

add_subdirectory(36-qlcdnumber-beginner)
set_target_properties(36-qlcdnumber-beginner PROPERTIES OUTPUT_NAME "03-36-qlcdnumber")

add_subdirectory(37-qcalendarwidget-beginner)
set_target_properties(37-qcalendarwidget-beginner PROPERTIES OUTPUT_NAME "03-37-qcalendarwidget")

add_subdirectory(38-qgroupbox-beginner)
set_target_properties(38-qgroupbox-beginner PROPERTIES OUTPUT_NAME "03-38-qgroupbox")

add_subdirectory(39-qtabwidget-beginner)
set_target_properties(39-qtabwidget-beginner PROPERTIES OUTPUT_NAME "03-39-qtabwidget")

add_subdirectory(40-qtabbar-beginner)
set_target_properties(40-qtabbar-beginner PROPERTIES OUTPUT_NAME "03-40-qtabbar")

add_subdirectory(41-qstackedwidget-beginner)
set_target_properties(41-qstackedwidget-beginner PROPERTIES OUTPUT_NAME "03-41-qstackedwidget")

add_subdirectory(42-qsplitter-beginner)
set_target_properties(42-qsplitter-beginner PROPERTIES OUTPUT_NAME "03-42-qsplitter")

add_subdirectory(43-qtoolbox-beginner)
set_target_properties(43-qtoolbox-beginner PROPERTIES OUTPUT_NAME "03-43-qtoolbox")

add_subdirectory(44-qscrollarea-beginner)
set_target_properties(44-qscrollarea-beginner PROPERTIES OUTPUT_NAME "03-44-qscrollarea")

add_subdirectory(45-qframe-separator-beginner)
set_target_properties(45-qframe-separator-beginner PROPERTIES OUTPUT_NAME "03-45-qframe-separator")

add_subdirectory(46-qlistwidget-beginner)
set_target_properties(46-qlistwidget-beginner PROPERTIES OUTPUT_NAME "03-46-qlistwidget")

add_subdirectory(47-qlistview-beginner)
set_target_properties(47-qlistview-beginner PROPERTIES OUTPUT_NAME "03-47-qlistview")

add_subdirectory(48-qtreewidget-beginner)
set_target_properties(48-qtreewidget-beginner PROPERTIES OUTPUT_NAME "03-48-qtreewidget")

add_subdirectory(49-qtreeview-beginner)
set_target_properties(49-qtreeview-beginner PROPERTIES OUTPUT_NAME "03-49-qtreeview")

add_subdirectory(50-qtablewidget-beginner)
set_target_properties(50-qtablewidget-beginner PROPERTIES OUTPUT_NAME "03-50-qtablewidget")

add_subdirectory(51-qtableview-beginner)
set_target_properties(51-qtableview-beginner PROPERTIES OUTPUT_NAME "03-51-qtableview")

add_subdirectory(52-qheaderview-beginner)
set_target_properties(52-qheaderview-beginner PROPERTIES OUTPUT_NAME "03-52-qheaderview")

add_subdirectory(53-qcolumnview-beginner)
set_target_properties(53-qcolumnview-beginner PROPERTIES OUTPUT_NAME "03-53-qcolumnview")

add_subdirectory(54-qundoview-beginner)
set_target_properties(54-qundoview-beginner PROPERTIES OUTPUT_NAME "03-54-qundoview")

add_subdirectory(55-qmainwindow-beginner)
set_target_properties(55-qmainwindow-beginner PROPERTIES OUTPUT_NAME "03-55-qmainwindow")

add_subdirectory(56-qmenubar-menu-action-beginner)
set_target_properties(56-qmenubar-menu-action-beginner PROPERTIES OUTPUT_NAME "03-56-qmenubar-menu-action")

add_subdirectory(57-qtoolbar-beginner)
set_target_properties(57-qtoolbar-beginner PROPERTIES OUTPUT_NAME "03-57-qtoolbar")

add_subdirectory(58-qstatusbar-beginner)
set_target_properties(58-qstatusbar-beginner PROPERTIES OUTPUT_NAME "03-58-qstatusbar")

add_subdirectory(59-qdockwidget-beginner)
set_target_properties(59-qdockwidget-beginner PROPERTIES OUTPUT_NAME "03-59-qdockwidget")

add_subdirectory(60-qdialog-beginner)
set_target_properties(60-qdialog-beginner PROPERTIES OUTPUT_NAME "03-60-qdialog")

add_subdirectory(61-qdialogbuttonbox-beginner)
set_target_properties(61-qdialogbuttonbox-beginner PROPERTIES OUTPUT_NAME "03-61-qdialogbuttonbox")

add_subdirectory(62-qmessagebox-beginner)
set_target_properties(62-qmessagebox-beginner PROPERTIES OUTPUT_NAME "03-62-qmessagebox")

add_subdirectory(63-qinputdialog-beginner)
set_target_properties(63-qinputdialog-beginner PROPERTIES OUTPUT_NAME "03-63-qinputdialog")

add_subdirectory(64-qcolordialog-beginner)
set_target_properties(64-qcolordialog-beginner PROPERTIES OUTPUT_NAME "03-64-qcolordialog")

add_subdirectory(65-qfontdialog-beginner)
set_target_properties(65-qfontdialog-beginner PROPERTIES OUTPUT_NAME "03-65-qfontdialog")

add_subdirectory(66-qfiledialog-beginner)
set_target_properties(66-qfiledialog-beginner PROPERTIES OUTPUT_NAME "03-66-qfiledialog")

add_subdirectory(67-qprogressdialog-beginner)
set_target_properties(67-qprogressdialog-beginner PROPERTIES OUTPUT_NAME "03-67-qprogressdialog")

add_subdirectory(68-qerrormessage-beginner)
set_target_properties(68-qerrormessage-beginner PROPERTIES OUTPUT_NAME "03-68-qerrormessage")

add_subdirectory(69-qwizard-beginner)
set_target_properties(69-qwizard-beginner PROPERTIES OUTPUT_NAME "03-69-qwizard")

add_subdirectory(70-qsplashscreen-beginner)
set_target_properties(70-qsplashscreen-beginner PROPERTIES OUTPUT_NAME "03-70-qsplashscreen")

add_subdirectory(71-qmdiarea-mdisubwindow-beginner)
set_target_properties(71-qmdiarea-mdisubwindow-beginner PROPERTIES OUTPUT_NAME "03-71-qmdiarea-mdisubwindow")

add_subdirectory(72-qprinter-beginner)
set_target_properties(72-qprinter-beginner PROPERTIES OUTPUT_NAME "03-72-qprinter")

add_subdirectory(73-qprintdialog-beginner)
set_target_properties(73-qprintdialog-beginner PROPERTIES OUTPUT_NAME "03-73-qprintdialog")

add_subdirectory(74-qprintpreviewdialog-beginner)
set_target_properties(74-qprintpreviewdialog-beginner PROPERTIES OUTPUT_NAME "03-74-qprintpreviewdialog")
